# solana-mcp-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT_GUIDE_SOLAHAHA.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.simple  Gemfile  PRODUCTION_VALIDATION.md  README.md  SBPF_INTEGRATION_PLAN.md  SBPF_TESTING_REPORT.md  SECURITY_ADVISORY_ANALYSIS.md  SITE_README.md  _config.yml  bench-config.json  bookmarks.md  clickhouse-schema.sql  config.json  index.md  llms.txt  missing_methods_analysis.md  netlify.toml  pump-holder-tracker.html  pump-token-flow.html  run-optimized-benchmarks.sh  schema.yaml  search.md  test-benchmarks.sh  test-mcp-jsonrpc.js  test-mcp-local.sh  test.sh  test_request.json  test_sequence.sh  validator-pro.html  xr-analytics-pro.html  xr-viz-ar.html  xr-viz-enhanced-v2.html  xr-viz-enhanced.html  (+1 more)
.github/workflows/: audit.yml  benchmark.yml  build.yml  deploy-prod.yml  mcp-inspector.yml  pages.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
_docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  EXAMPLES.md  ONBOARDING.md  README.md  benchmarks.md  docker-scaling.md  mcp-json-rpc-api.md  metrics.md  security-audit.md  timeout-configuration.md  web-service.md
_docs/developer/: error_handling.md
_layouts/: default.html  redirect.html
assets/css/: main-old.css  main.css
assets/js/: main.js
backend/: collector.js  package.json  server.js
benches/: README.md  http_api_bench.rs  optimized_benchmarks.rs  rpc_methods_bench.rs  websocket_bench.rs
docs/: API_REFERENCE.html  API_REFERENCE.md  ARCHITECTURE.html  ARCHITECTURE.md  CONFIGURATION.html  CONFIGURATION.md  DEPLOYMENT.html  DEPLOYMENT.md  EXAMPLES.html  EXAMPLES.md  ONBOARDING.html  ONBOARDING.md  README.md  benchmarks.md  caching.md  docker-scaling.md  index.html  mcp-json-rpc-api.md  metrics.md  netlify-deployment.md  web-service.md  x402-implementation-summary.md  x402-integration-tutorial.md  x402-integration.md
docs/developer/: error_handling.md
examples/: test_roundrobin.rs  test_simple_rpc.rs
issues/: 1.md
k8s/: README.md  deployment.yaml  hpa.yaml
scripts/: README.md  deploy-compose.sh  deploy-docker.sh  deploy-gcf.sh  deploy-k8s.sh  deploy-lambda.sh  deploy-local.sh  deploy-netlify.sh  deploy-vercel.sh  deploy.sh  install.sh
src/: cache.rs  config.rs  error.rs  http_server.rs  lib.rs  logging.rs  main.rs  metrics.rs  protocol.rs  transport.rs  validation.rs  websocket_server.rs
src/docs/: mod.rs
src/docs/core/: accounts.md  mod.rs  programs.md  transactions.md
src/docs/guides/: deployment.md  development.md  mod.rs  programs.md  rpc_optimization.md  transaction_routes.md
src/docs/rpc/: accounts.rs  mod.rs  (+4 more)
src/rpc/: accounts.rs  blocks.rs  missing_methods.rs  mod.rs  system.rs  tokens.rs  transactions.rs
src/sbpf/: binary_validator.rs  devnet_deployer.rs  errors.rs  mod.rs  security_scanner.rs  test_executor.rs  types.rs  vm_wrapper.rs
src/server/: mod.rs
src/tests/: account_tests.rs  block_tests.rs  e2e.rs  epoch_tests.rs  mod.rs  system_tests.rs  token_tests.rs  transaction_tests.rs
src/tools/: mod.rs
src/x402/: config.rs  facilitator.rs  mcp_integration.rs  mod.rs  svm_exact.rs  types.rs  validation.rs
test-config/: mcp-config.json
tests/: autoscaling.rs  cache_integration.rs  e2e.rs  error_handling.rs  integration_websocket_missing_methods.rs  sbpf_integration.rs  sbpf_mcp_tools.rs  transport.rs  validation.rs  web_service.rs  x402_integration.rs
