[package]
name = "solana-mcp-server"
version = "1.0.2"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
url = { version = "2.5.0", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
dashmap = "6.1"
solana-client = "~2.2"
solana-sdk = "~2.2"
solana-account-decoder = "~2.2"
solana-transaction-status = "~2.2"
spl-token = "8.0"
base64 = "0.22"
bs58 = "0.5"
bincode = "1.3"
reqwest = { version = "0.12", features = ["json"] }
