[package]
name = "solana-mcp-server"
version = "1.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
url = { version = "2.5.0", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
dashmap = "6.1"
solana-client = "~2.3"
solana-sdk = "~2.3"
solana-account-decoder = "~2.3"
solana-transaction-status = "~2.3"
spl-token = "8.0"
base64 = "0.22"
bs58 = "0.5"
bincode = "1.3"
reqwest = { version = "0.11", features = ["json"] }
prometheus = "0.14"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout"] }
clap = { version = "4.0", features = ["derive"] }
solana-pubsub-client = "~2.3"
tokio-tungstenite = "0.27"
futures-util = "0.3"
# Security fix: Replace atty with is-terminal to fix unmaintained dependency
is-terminal = "0.4"
# Explicit OpenSSL dependencies for better Windows compatibility
openssl = "0.10"
openssl-sys = "0.9"
# Force secure versions of cryptographic dependencies
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.1"

[dev-dependencies]
tokio-test = "0.4"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures-util = "0.3"

[[bench]]
name = "http_api_bench"  
harness = false

[[bench]]
name = "rpc_methods_bench"
harness = false

[[bench]]
name = "websocket_bench"
harness = false

# Security patches to force secure versions of vulnerable dependencies
[patch.crates-io.atty] 
git = "https://github.com/softprops/atty"
branch = "master"
